# image_matching

./: .gitignore  ARTIFACT-EVALUATION.md  CMakeLists.txt  LICENSE  README.md  dockerfile  generate_figures.sh  run_artifact.sh
include/: config.h  cosine_similarity.h  enroller.h  enroller_base.h  enroller_blind.h  enroller_diag.h  enroller_hers.h  openFHE_wrapper.h  receiver.h  receiver_base.h  receiver_blind.h  receiver_diag.h  receiver_grote.h  receiver_he.h  receiver_hers.h  receiver_plain.h  receiver_pre.h  receiver_secure.h  sender.h  sender_base.h  sender_blind.h  sender_diag.h  sender_grote.h  sender_hers.h  vector_utils.h
src/: cosine_similarity.cpp  enroller.cpp  enroller_base.cpp  main.cpp  main_accuracy.cpp  openFHE_wrapper.cpp  receiver.cpp  receiver_base.cpp  receiver_grote.cpp  receiver_he.cpp  receiver_plain.cpp  receiver_pre.cpp  receiver_secure.cpp  sender.cpp  sender_base.cpp  sender_grote.cpp  vector_utils.cpp
src/enroller/: enroller.cpp  enroller_base.cpp  enroller_blind.cpp  enroller_diag.cpp  enroller_hers.cpp
src/receiver/: receiver.cpp  receiver_base.cpp  receiver_blind.cpp  receiver_diag.cpp  receiver_grote.cpp  receiver_hers.cpp
src/sender/: sender.cpp  sender_base.cpp  sender_blind.cpp  sender_diag.cpp  sender_grote.cpp  sender_hers.cpp
tools/: dataset.sh  experiment.sh  gen_all_datasets.sh  gen_data_parallel  gen_dataset.sh  generate_data.cpp  generate_data.sh  setup_experiment.sh
tools/figures/: 15IndexTotals.csv  15MembershipTotals.csv  approach1.csv  approach2.csv  approach3.csv  approach4.csv  approach5.csv  idBandwidth.py  (+5 more)
